<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="st"
    android:id="@+id/dl"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_collapseMode="pin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleEnabled="false"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar2"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorAccent" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="pin"
                android:layout_marginTop="70dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/mydevice"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:drawableEnd="@drawable/ic_finddevice"
                    android:drawableTint="@color/colorAccent"
                    android:hint="@string/devicefound" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/textView"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_alignParentStart="true"
                        android:text="@string/bill"/>
                    <Switch
                        android:id="@+id/switch1"
                        android:layout_width="70dp"
                        android:layout_gravity="right"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="190dp"
                        android:layout_marginTop="5dp"
                        android:layout_alignParentEnd="true"
                        android:text="Yes"/>
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:elevation="3dp"
                    android:background="@drawable/back"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/billupload"
                        tools:text="@string/billupload" />
                    <ImageView
                        android:id="@+id/billingimage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:hapticFeedbackEnabled="true"
                        android:scaleType="fitXY" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:elevation="3dp"
                    android:background="@drawable/back"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/problemselect" />
                    <CheckBox
                        android:id="@+id/dd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:text="Device Dead"/>

                    <CheckBox
                        android:id="@+id/bs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:text="Broken Screen"/>

                    <CheckBox
                        android:id="@+id/sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:text="Speaker Problem"/>

                    <CheckBox
                        android:id="@+id/bbp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:text="Broken Back-Panel"/>

                    <CheckBox
                        android:id="@+id/cp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:text="Charging Port Problem"/>

                    <CheckBox
                        android:id="@+id/snr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:text="Screen Not Responding"/>
                    <CheckBox
                        android:id="@+id/ap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:text="Any Other Problem"/>
                </LinearLayout>
                <EditText
                    android:id="@+id/addprob"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:maxLines="3"
                    android:hint="@string/problemadditional"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:elevation="3dp"
                    android:background="@drawable/back"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:padding="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/problemphoto"
                        tools:text="@string/problemphoto" />

                    <ImageView
                        android:id="@+id/deviceimage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:hapticFeedbackEnabled="true"
                        android:scaleType="fitXY" />
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="3dp"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/back">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/expand">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:padding="5dp"
                            android:text="Cost Details"/>
                        <TextView
                            android:id="@+id/icon"
                            android:layout_alignParentEnd="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/ic_expand"
                            android:backgroundTint="@color/colorAccent"/>
                    </RelativeLayout>
                    <LinearLayout
                        android:id="@+id/expanded"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:orientation="vertical"
                        android:layout_marginTop="30dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginBottom="5dp"
                            android:background="@color/colorAccent"/>
                        <TextView
                            android:id="@+id/totalcost"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="Cost : "/>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="apply coupon : "
                                android:layout_alignParentStart="true"/>
                            <TextView
                                android:id="@+id/applycoupon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="check available coupon"
                                android:textColor="#FAD25C"
                                android:layout_marginEnd="10dp"
                                android:layout_alignParentEnd="true"/>
                        </RelativeLayout>
                        <TextView
                            android:id="@+id/removecoupon"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="remove coupon"
                            android:textColor="@color/splash"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:padding="2dp"
                            android:textSize="15sp"
                            android:background="#F49C9C"
                            android:layout_margin="5dp"/>
                        <androidx.viewpager.widget.ViewPager
                            android:id="@+id/pager"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="8dp"
                            android:clickable="true"
                            android:focusable="true" />
                        <LinearLayout
                            android:id="@+id/SliderDots"
                            android:orientation="horizontal"
                            android:gravity="center_horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-25dp"/>
                        <TextView
                            android:id="@+id/amountpay"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="10dp"
                            android:text="Amount payable : "/>
                    </LinearLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/back_view"
                    android:elevation="5dp"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:id="@+id/total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_alignParentLeft="true"
                        android:text="Total Cost"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/total"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="2dp"
                        android:text="₹0"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"/>

                    <Button
                        android:id="@+id/placereq_btn"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:background="@drawable/place_req_bt"
                        android:text="@string/requestplace" />
                </RelativeLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/nav_manu"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header">

    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>